<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDividerAddRemark"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="6dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/goods"
            android:textSize="@dimen/tv_title"/>
        <TextView
            android:id="@+id/select_goods"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/tv_des"
            android:text="请选择具体商品"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rl_count"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/colorTextWhite"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_count"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/classify_eat" />

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/iv_count"
            android:text="@string/count"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/tv_title" />

        <EditText
            android:id="@+id/et_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:gravity="right"
            android:hint="@string/hint_edit_count"
            android:textColor="@color/colorTextRed"
            android:textColorHint="@color/colorTextRed"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rl_price"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/colorTextWhite"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_classify"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/classify_eat" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/iv_classify"
            android:text="@string/sellPrice"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/tv_title" />

        <EditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/tv_price"
            android:background="@null"
            android:gravity="right"
            android:hint="@string/hint_edit_money"
            android:textColor="@color/colorTextRed"
            android:textColorHint="@color/colorTextRed"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/time"
            android:textSize="@dimen/tv_title"/>
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/tv_des"
            android:text="请选择日期"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/note"
            android:textSize="@dimen/tv_title"/>
        <EditText
            android:id="@+id/et_note"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/tv_des"
            android:hint="写点什么吧！"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDividerAddRemark"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="6dp"/>

    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<android.inputmethodservice.KeyboardView-->
            <!--android:id="@+id/keyboard_view"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:background="@color/colorKeyboardDivider"-->
            <!--android:focusable="true"-->
            <!--android:focusableInTouchMode="true"-->
            <!--android:keyBackground="@drawable/keyboard_select"-->
            <!--android:keyTextColor="@color/colorTextWhite"/>-->
    <!--</RelativeLayout>-->
</LinearLayout>