<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/paddingLeft">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDividerAddRemark"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="6dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_width"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/icon_margin"
            android:layout_marginRight="@dimen/icon_margin"
            android:src="@drawable/ic_category" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="@dimen/select_item_height"
            android:gravity="center"
            android:text="@string/otherName"
            android:textSize="@dimen/tv_title"/>
        <TextView
            android:id="@+id/select_goods"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="@dimen/select_item_height"
            android:gravity="center"
            android:textSize="@dimen/tv_des"
            android:text="请选择具体商品"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rl_count"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/colorTextWhite"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_width"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/icon_margin"
            android:layout_marginRight="@dimen/icon_margin"
            android:src="@drawable/ic_count" />

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="@dimen/select_item_height"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_count"
            android:text="@string/otherCount"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/tv_title" />

        <EditText
            android:id="@+id/et_count"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="@dimen/select_item_height"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:gravity="right"
            android:hint="@string/hint_edit_count"
            android:textColor="@color/colorTextRed"
            android:textColorHint="@color/colorTextRed"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rl_price"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/colorTextWhite"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_width"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/icon_margin"
            android:layout_marginRight="@dimen/icon_margin"
            android:src="@drawable/ic_price" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="@dimen/select_item_height"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_classify"
            android:text="@string/otherPrice"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/tv_title" />

        <EditText
            android:id="@+id/et_price"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="@dimen/select_item_height"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/tv_price"
            android:background="@null"
            android:gravity="right"
            android:hint="@string/hint_edit_money"
            android:textColor="@color/colorTextRed"
            android:textColorHint="@color/colorTextRed"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">
        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_width"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/icon_margin"
            android:layout_marginRight="@dimen/icon_margin"
            android:src="@drawable/ic_time" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="@dimen/select_item_height"
            android:gravity="center"
            android:text="@string/time"
            android:textSize="@dimen/tv_title"/>
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="@dimen/select_item_height"
            android:gravity="center"
            android:textSize="@dimen/tv_des"
            android:text="请选择日期"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">
        <ImageView
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_width"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/icon_margin"
            android:layout_marginRight="@dimen/icon_margin"
            android:src="@drawable/ic_note" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="@dimen/select_item_height"
            android:gravity="center"
            android:text="@string/note"
            android:textSize="@dimen/tv_title"/>
        <EditText
            android:id="@+id/et_note"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="@dimen/select_item_height"
            android:gravity="center"
            android:textSize="@dimen/tv_des"
            android:hint="写点什么吧！"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDividerAddRemark"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="6dp"/>
</LinearLayout>